<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:nestedScrollingEnabled="false"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            tools:src="@drawable/content_cover"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster"
            android:id="@+id/detail_movie_poster"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_padding"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:textStyle="bold"
            android:textSize="@dimen/default_header_text_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginRight="8dp"
            android:text="@string/movie_release_date"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/detail_movie_poster"
            app:layout_constraintLeft_toRightOf="@+id/detail_movie_poster"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            app:layout_constraintRight_toRightOf="parent" />
        <TextView
            android:id="@+id/detail_movie_release_date"
            android:textSize="@dimen/default_title_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintLeft_toLeftOf="@+id/textView"
            tools:text="@string/movie_year"/>
        <TextView
            android:textStyle="bold"
            android:textSize="@dimen/default_header_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_rate"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_release_date"
            app:layout_constraintLeft_toLeftOf="@+id/detail_movie_release_date"
            android:id="@+id/textView2" />
        <TextView
            android:id="@+id/detail_movie_count_average"
            android:textSize="@dimen/default_title_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/movie_vote_average_sample"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintLeft_toLeftOf="@+id/textView2" />

        <TextView
            tools:text="@string/movie_description"
            android:textSize="@dimen/default_title_text_size"
            android:id="@+id/detail_movie_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_poster"
            app:layout_constraintLeft_toLeftOf="@+id/detail_movie_poster"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginRight="8dp" />

        <TextView
            android:textSize="@dimen/default_header_text_size"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_trailer"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_description"
            app:layout_constraintLeft_toLeftOf="@+id/detail_movie_description"
            android:id="@+id/textView3" />

        <TextView
            android:textSize="@dimen/default_header_text_size"
            android:text="@string/movie_review"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_movie_trailer_list"
            app:layout_constraintLeft_toLeftOf="@+id/textView3"
            android:id="@+id/textView4" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/detail_movie_movie_trailer_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:nestedScrollingEnabled="false"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/detail_movie_movie_review_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/default_margin"
            android:paddingBottom="@dimen/default_padding"
            android:layout_marginTop="@dimen/default_margin"
            android:nestedScrollingEnabled="false"
            app:layout_constraintLeft_toLeftOf="@+id/textView4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>